# Roi3DF

./: .gitignore  README.md  conanfile.py  install_with_profile.bat
cmake/: CMakeLists.txt
include/: FixedSizeVector.h  Roi3DF.h  Roi3DF_cuda.h  Roi3DF_eigen.h  Roi3DF_geometricFunctions.h  Roi3DF_osg.h  Roi3DF_qt.h  check_function_existence.h  vec_cuda.h  vec_eigen.h  vec_geometricOperations.h  vec_osg.h  vec_qt.h  vec_template.h
src/: Roi3DF.cpp
test/: CMakeLists.txt
test/common/: Roi3DF_test.h
test/test_cuda/: CMakeLists.txt  conanfile.py  main.cpp
test/test_custom_no_operators/: CMakeLists.txt  main.cpp
test/test_custom_with_operators/: CMakeLists.txt  conanfile.py  main.cpp
test/test_eigen/: CMakeLists.txt  conanfile.py  main.cpp
test/test_osg/: CMakeLists.txt  conanfile.py  main.cpp
test/test_qt/: CMakeLists.txt  conanfile.py  main.cpp
