CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

PROJECT( Roi3DF )

SET( BUILD_EXAMPLE_CUDA OFF CACHE BOOL "Generate test for CUDA vector type" )
SET( BUILD_EXAMPLE_CUSTOM_NO_OPERATORS OFF CACHE BOOL "Generate test for custom vector type without operators" )
SET( BUILD_EXAMPLE_CUSTOM_WITH_OPERATORS OFF CACHE BOOL "Generate test for custom vector type with operators" )
SET( BUILD_EXAMPLE_EIGEN OFF CACHE BOOL "Generate test for eigen vector type" )
SET( BUILD_EXAMPLE_OSG OFF CACHE BOOL "Generate test for OSG vector type" )
SET( BUILD_EXAMPLE_QT OFF CACHE BOOL "Generate test for QT vector type" )

FUNCTION( STRING_FROM_BOOL VAR_STRING VAR_BOOL )
	IF( ${VAR_BOOL} )
		SET( ${VAR_STRING} "True" PARENT_SCOPE )
	ELSE( ${VAR_BOOL} )
		SET( ${VAR_STRING} "False" PARENT_SCOPE )
	ENDIF( ${VAR_BOOL} )
ENDFUNCTION( STRING_FROM_BOOL)

STRING_FROM_BOOL( "STR_BUILD_EXAMPLE_CUDA" "BUILD_EXAMPLE_CUDA" )
STRING_FROM_BOOL( "STR_BUILD_EXAMPLE_CUSTOM_NO_OPERATORS" "BUILD_EXAMPLE_CUSTOM_NO_OPERATORS" )
STRING_FROM_BOOL( "STR_BUILD_EXAMPLE_CUSTOM_WITH_OPERATORS" "BUILD_EXAMPLE_CUSTOM_WITH_OPERATORS" )
STRING_FROM_BOOL( "STR_BUILD_EXAMPLE_EIGEN" "BUILD_EXAMPLE_EIGEN" )
STRING_FROM_BOOL( "STR_BUILD_EXAMPLE_OSG" "BUILD_EXAMPLE_OSG" )
STRING_FROM_BOOL( "STR_BUILD_EXAMPLE_QT" "BUILD_EXAMPLE_QT" )

INCLUDE(conan.cmake)
conan_cmake_run(
	CONANFILE ../conanfile.py
	BASIC_SETUP CMAKE_TARGETS
	GENERATORS cmake_multi
	OPTIONS Roi3DF:build_test_cuda=${STR_BUILD_EXAMPLE_CUDA}
			Roi3DF:build_test_custom_no_operators=${STR_BUILD_EXAMPLE_CUSTOM_NO_OPERATORS}
			Roi3DF:build_test_custom_with_operators=${STR_BUILD_EXAMPLE_CUSTOM_WITH_OPERATORS}
			Roi3DF:build_test_osg=${STR_BUILD_EXAMPLE_OSG}
			Roi3DF:build_test_eigen=${STR_BUILD_EXAMPLE_EIGEN}
			Roi3DF:build_test_qt=${STR_BUILD_EXAMPLE_QT}
	BUILD missing)

INCLUDE_DIRECTORIES(
	../include
)

SET( INCLUDE_FILES_VECTOR_TYPES
	../include/check_function_existence.h
	../include/vec_template.h
	../include/vec_cuda.h
	../include/vec_eigen.h
	../include/vec_geometricOperations.h
	../include/vec_osg.h
	../include/vec_qt.h
)

SET( INCLUDE_FILES_ROI_TYPES
	../include/Roi3DF_eigen.h
	../include/Roi3DF_osg.h
	../include/Roi3DF_cuda.h
	../include/Roi3DF_qt.h
)

SET( INCLUDE_FILES_OTHER
	../include/Roi3DF.h
	../include/Roi3DF_geometricFunctions.h
	../include/FixedSizeVector.h
	../include/cuda_host_device.h
)

SET( INCLUDE_FILES 
	${INCLUDE_FILES_VECTOR_TYPES}
	${INCLUDE_FILES_ROI_TYPES}
	${INCLUDE_FILES_OTHER}
)

SET( SOURCE_FILES
	../src/Roi3DF.cpp
)

ADD_LIBRARY ( ${PROJECT_NAME} STATIC
	${INCLUDE_FILES}
	${SOURCE_FILES}
)

SET_PROPERTY( TARGET ${PROJECT_NAME} PROPERTY FOLDER "Algorithms")

SOURCE_GROUP( "Header Files\\Vector Types" FILES ${INCLUDE_FILES_VECTOR_TYPES} )
SOURCE_GROUP( "Header Files\\Roi Types" FILES ${INCLUDE_FILES_ROI_TYPES} )

IF( BUILD_EXAMPLE_CUDA OR BUILD_EXAMPLE_CUSTOM_NO_OPERATORS OR BUILD_EXAMPLE_CUSTOM_WITH_OPERATORS OR BUILD_EXAMPLE_EIGEN OR BUILD_EXAMPLE_OSG OR BUILD_EXAMPLE_QT )
	ADD_SUBDIRECTORY( ../test ${CMAKE_CURRENT_BINARY_DIR}/test )
ENDIF()