CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT( Roi3DF_Tests )

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

SET( BUILD_EXAMPLE_CUDA OFF CACHE BOOL "Generate test for CUDA vector type" )
SET( BUILD_EXAMPLE_CUSTOM_NO_OPERATORS OFF CACHE BOOL "Generate test for custom vector type without operators" )
SET( BUILD_EXAMPLE_CUSTOM_WITH_OPERATORS OFF CACHE BOOL "Generate test for custom vector type with operators" )
SET( BUILD_EXAMPLE_EIGEN OFF CACHE BOOL "Generate test for eigen vector type" )
SET( BUILD_EXAMPLE_OSG OFF CACHE BOOL "Generate test for OSG vector type" )
SET( BUILD_EXAMPLE_QT OFF CACHE BOOL "Generate test for QT vector type" )

ADD_CUSTOM_TARGET( ${PROJECT_NAME} SOURCES
	common/Roi3DF_test.h
)

SET_PROPERTY( TARGET ${PROJECT_NAME} PROPERTY FOLDER "Tests")

IF( BUILD_EXAMPLE_CUDA )
	ADD_SUBDIRECTORY( test_cuda ${CMAKE_CURRENT_BINARY_DIR}/test_cuda)
ENDIF( )

IF( BUILD_EXAMPLE_CUSTOM_NO_OPERATORS )
	ADD_SUBDIRECTORY( test_custom_no_operators ${CMAKE_CURRENT_BINARY_DIR}/test_custom_no_operators)
ENDIF( )

IF( BUILD_EXAMPLE_CUSTOM_WITH_OPERATORS )
	ADD_SUBDIRECTORY( test_custom_with_operators ${CMAKE_CURRENT_BINARY_DIR}/test_custom_with_operators)
ENDIF( )

IF( BUILD_EXAMPLE_EIGEN )
	ADD_SUBDIRECTORY( test_eigen ${CMAKE_CURRENT_BINARY_DIR}/test_eigen)
ENDIF( )

IF( BUILD_EXAMPLE_OSG )
	ADD_SUBDIRECTORY( test_osg ${CMAKE_CURRENT_BINARY_DIR}/test_osg)
ENDIF( )

IF( BUILD_EXAMPLE_QT )
	ADD_SUBDIRECTORY( test_qt ${CMAKE_CURRENT_BINARY_DIR}/test_qt)
ENDIF( )
