CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT( Roi3DF_Tests )

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

ADD_CUSTOM_TARGET( ${PROJECT_NAME} SOURCES
	common/Roi3DF_test.h
)

SET_PROPERTY( TARGET ${PROJECT_NAME} PROPERTY FOLDER "Tests")

IF( BUILD_EXAMPLE_CUDA )
	ADD_SUBDIRECTORY( test_cuda ${CMAKE_CURRENT_BINARY_DIR}/test_cuda)
ENDIF( )

IF( BUILD_EXAMPLE_CUSTOM_NO_OPERATORS )
	ADD_SUBDIRECTORY( test_custom_no_operators ${CMAKE_CURRENT_BINARY_DIR}/test_custom_no_operators)
ENDIF( )

IF( BUILD_EXAMPLE_CUSTOM_WITH_OPERATORS )
	ADD_SUBDIRECTORY( test_custom_with_operators ${CMAKE_CURRENT_BINARY_DIR}/test_custom_with_operators)
ENDIF( )

IF( BUILD_EXAMPLE_EIGEN )
	ADD_SUBDIRECTORY( test_eigen ${CMAKE_CURRENT_BINARY_DIR}/test_eigen)
ENDIF( )

IF( BUILD_EXAMPLE_OSG )
	ADD_SUBDIRECTORY( test_osg ${CMAKE_CURRENT_BINARY_DIR}/test_osg)
ENDIF( )

IF( BUILD_EXAMPLE_QT )
	ADD_SUBDIRECTORY( test_qt ${CMAKE_CURRENT_BINARY_DIR}/test_qt)
ENDIF( )
