CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT( Roi3DF_TestOsg )

INCLUDE(${CMAKE_CURRENT_BINARY_DIR}/conanbuildinfo.cmake)
CONAN_BASIC_SETUP()

INCLUDE_DIRECTORIES(
	../../include
	../common
)

ADD_EXECUTABLE( ${PROJECT_NAME}
	main.cpp
)

TARGET_LINK_LIBRARIES( ${PROJECT_NAME}
	Roi3DF
)

CONAN_TARGET_LINK_LIBRARIES(${PROJECT_NAME})

SET_PROPERTY( TARGET ${PROJECT_NAME} PROPERTY FOLDER "Tests")