CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT( Roi3DF_TestQt )

FIND_PACKAGE( Qt5Gui )

INCLUDE(${CMAKE_CURRENT_BINARY_DIR}/conanbuildinfo.cmake)
CONAN_BASIC_SETUP()

INCLUDE_DIRECTORIES(
	../../include
	../common
)

ADD_EXECUTABLE( ${PROJECT_NAME}
	main.cpp
)

TARGET_LINK_LIBRARIES( ${PROJECT_NAME}
	Roi3DF
	Qt5::Gui
)

CONAN_TARGET_LINK_LIBRARIES(${PROJECT_NAME})

SET_PROPERTY( TARGET ${PROJECT_NAME} PROPERTY FOLDER "Tests")